blogs home css issues with alignmment

--- a/src/components/blogs/blog-post.css
+++ b/src/components/blogs/blog-post.css
@@ -1,8 +1,7 @@
-.container {
+.blog-post {
     margin-top: 10px;
     display: flex;
-    flex-direction: column;
-    
+    /* flex-direction: column; */
 }
 
 .container h1 {
