--- a/src/components/blogs/blogs-home.css
+++ b/src/components/blogs/blogs-home.css
@@ -5,17 +5,16 @@
     padding-bottom: 20px;
     
 }
-.container {
+.blogs-page .container {
     
     display: flex;
     gap: 20px;
     margin-top: 50px;
-    padding: 0 auto !important;
-    
-    
+    padding-bottom: 150px;
+    text-align: center;
 }
 
-.title {
+.blogs-page .title {
     text-align: center;
     font-size: 60px;
     color: #2d4c74;
@@ -39,16 +38,16 @@
     color: #2d4c74;
 }
 
-.blog-button:hover {
+.blogs-page .blog-button:hover {
     background-color: #def8db;
 }
 
-.blog-img {
+.blogs-page .blog-img {
     max-width: 200px;
     border-radius: 4px;
 }
 
-.location h5 {
+.blogs-page .location h5 {
     margin: 0;
 }
 
@@ -60,7 +59,7 @@
     font-style: normal;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 980px) {
 
     .container {
       flex-direction: column; 
